--- a/sudoku-project.cabal
+++ b/sudoku-project.cabal
@@ -25,8 +25,10 @@ source-repository head
 
 library
   exposed-modules:
+      Const
       Interface
       Lib
+      Types
   other-modules:
       Paths_sudoku_project
   autogen-modules:
