--- a/sudoku-project.cabal
+++ b/sudoku-project.cabal
@@ -41,7 +41,7 @@ library
       base >=4.7 && <5
     , gloss
     , random
-    , time
+    , random-shuffle
   default-language: Haskell2010
 
 executable sudoku-project-exe
@@ -57,8 +57,8 @@ executable sudoku-project-exe
       base >=4.7 && <5
     , gloss
     , random
+    , random-shuffle
     , sudoku-project
-    , time
   default-language: Haskell2010
 
 test-suite sudoku-project-test
@@ -75,6 +75,6 @@ test-suite sudoku-project-test
       base >=4.7 && <5
     , gloss
     , random
+    , random-shuffle
     , sudoku-project
-    , time
   default-language: Haskell2010
